# PyMesh

./: .gitignore  .gitmodules  README.md  Settings.cmake  setup.py
PyMesh/: Settings.cmake
cmake/: FindAllDependencies.cmake  GenerateDependencyTargets.cmake  SetInstallRpath.py
docs/: conf.py
pymesh/: Mesh.py  __init__.py  aabb_tree.py  assembler.py  boolean.py  boolean_unsupported.py  compression.py  convex_hull.py  cut_to_disk.py  exact_arithmetic.py  manifold_plus.py  map_attributes.py  material.py  matrixio.py  mesh.py  meshio.py  minkowski_sum.py  save_svg.py  selfintersection.py  sparse_solver.py  submesh.py  tetgen.py  tetrahedralize.py  voxel_grid.py  winding_number.py
python/: PyManifoldPlus.cpp
scripts/: add_attribute.py  add_element_attribute.py  add_index.py  arrangement_2d.py  bbox.py  boolean.py  box_gen.py  carve.py  convex_hull.py  curvature.py  delaunay_performance.py  distortion.py  dodecahedron_gen.py  extract_self_intersecting_faces.py  fem_check.py  find_file.py  fix_mesh.py  geodesic.py  highlight_boundary_edges.py  highlight_degenerated_faces.py  highlight_delaunay.py  highlight_inverted_tets.py  highlight_non_oriented_edges.py  highlight_nonmanifoldness.py  highlight_self_intersection.py  highlight_zero_area_faces.py  hilbert_curve_gen.py  icosphere_gen.py  inflate.py  map_to_sphere.py  matrix_gen.py  mean_curvature_flow.py  merge.py  mesh_diff.py  mesh_to_wire.py  meshconvert.py  meshstat.py  microstructure_gen.py  minkowski_sum.py  (+29 more)
tools/ManifoldPlus/: CMakeLists.txt  GridIndex.h  Intersection.h  Manifold.h  Octree.cpp  Octree.h
(+184 files in other folders)
